<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBio"
        android:layout_width="352dp"
        android:layout_height="277dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#ffff"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238">
        <!-- inner layout untuk di dalam card  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--mengubah ImageView menjadi CircularImageView-->
            <!-- sumber: https://github.com/lopspower/CircularImageView -->

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/photoProfile"
                android:layout_width="153dp"
                android:layout_height="325dp"
                android:contentDescription="@string/photo_profil_mahasiswa"
                app:civ_shadow="true"
                app:civ_shadow_color="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"

                app:srcCompat="@drawable/photo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fajar_Ammar_HS"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.824"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.072" />

            <com.google.android.material.chip.Chip
                android:id="@+id/short_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mahasiswa_ti"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.77"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.357" />

            <com.google.android.material.chip.Chip
                android:id="@+id/hobi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solving_problem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.745"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.755" />

            <com.google.android.material.chip.Chip
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a11_2018_11228"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.037"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.76" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContact"
        android:layout_width="223dp"
        android:layout_height="91dp"
        android:layout_marginTop="36dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardBio"
        app:layout_constraintVertical_bias="0.054">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="211dp"
            android:layout_height="81dp">

            <Button
                android:id="@+id/emailBtn"
                android:layout_width="57dp"
                android:layout_height="48dp"
                app:cornerRadius="15dp"
                app:icon="@android:drawable/ic_dialog_email"
                app:iconSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.727"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/mapsBtn"
                android:layout_width="57dp"
                android:layout_height="48dp"
                app:cornerRadius="15dp"
                app:icon="@android:drawable/ic_dialog_map"
                app:iconSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.727"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/kontakButton"
                android:layout_width="54dp"
                android:layout_height="48dp"
                app:cornerRadius="15dp"
                app:icon="@android:drawable/stat_sys_phone_call"
                app:iconPadding="8dp"
                app:iconSize="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.898"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.727"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textKontak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kontak yang dihubungi:"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.532"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.095" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>